Sauvegarde: i18n déplacé sous lib/core, correctifs UTF-8, écran inscription + sélecteur multi-rôles, nettoyage SizedBox, scripts.

--- a/lib/core/l10n/app_en.arb
+++ b/lib/core/l10n/app_en.arb
@@ -39,7 +39,7 @@
   "themeLight": "Light",
   "themeDark": "Dark",
   "forgotPasswordTitle": "Forgot password",
-  "forgotPasswordSubtitle": "Enter your email and we’ll send you a link to reset your password.",
+  "forgotPasswordSubtitle": "Enter your email and weÃ¢â‚¬â„¢ll send you a link to reset your password.",
   "emailLabel": "Email",
   "passwordLabel": "Password",
   "requiredField": "Required",
@@ -51,7 +51,7 @@
   "forgotPasswordLink": "Forgot password?",
   "signUpTitle": "Create an account",
   "accountSelectTitle": "Select account category",
-  "searchHint": "Search code or label…",
+  "searchHint": "Search code or labelÃ¢â‚¬Â¦",
   "acc66100": "66100 | Divisional meeting",
   "acc66102": "66102 | Divisional Christmas dinner",
   "acc66104": "66104 | Annual review",
@@ -73,7 +73,7 @@
   "roleVolunteer": "Volunteer (Community Service)",
   "roleFinance": "Finance manager",
   "roleAdmin": "Administrator",
-  "roleApprovalNote": "An administrator’s approval is required for this role.",
+  "roleApprovalNote": "An administratorÃ¢â‚¬â„¢s approval is required for this role.",
   "agreeTerms": "I agree to the terms",
   "continueLabel": "Continue",
   "verificationTitle": "Email verification",
